--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/tinker": "^2.5",
+        "nesbot/carbon": "^2.57",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
